force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/BET_BDD_Support_Doc_Auto_Create_Map__mdt.object-meta.xml
<CustomObject>
    <description>This map determines how many documents records should be created automatically once a BDD form is created.</description>
    <label>BDD Supporting Document Auto Create Map</label>
    <pluralLabel>BDD Supporting Document Auto Create Map</pluralLabel>
</CustomObject>