force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/fields/Document_Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Document_Creation_Source__c</fullName>
    <label>Document Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>