force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Report</fullName>
                <default>true</default>
                <label>3rd Party Report</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VAT Sign Off</fullName>
            </value>
            <value>
                <fullName>W-8</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Exemption Certificates</fullName>
            </value>
            <value>
                <fullName>Vessel Report</fullName>
            </value>
            <value>
                <fullName>Other Screening Document</fullName>
            </value>
            <value>
                <fullName>Banking Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>