force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <label>Secondary Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orbis</fullName>
                <default>true</default>
                <label>Orbis</label>
            </value>
            <value>
                <fullName>Bankers Almanac</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>