force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/fields/Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>Verification_Source__c</fullName>
    <label>Verification Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIES</fullName>
                <default>true</default>
                <label>VIES</label>
            </value>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>OFAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>