force-app/main/default/objects/BET_BDD_Support_Doc_Auto_Create_Map__mdt/listViews/Auto_Create_Matrix_Active.listView-meta.xml
<ListView>
    <fullName>Auto_Create_Matrix_Active</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Region__c</columns>
    <columns>Entity_Type__c</columns>
    <columns>Primary_Source__c</columns>
    <columns>Secondary_Source__c</columns>
    <columns>Verification_Source__c</columns>
    <columns>Document_Category__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Creation_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Auto Create Matrix - Active</label>
    <language>en_US</language>
</ListView>